--- a/search.html
+++ b/search.html
@@ -92,7 +92,7 @@
       </form>
     </div>
     <div class="modal-footer">
-      <button class="btn-submit" onclick="submitFeedback()">告诉一姐</button>
+      <button class="btn-submit" onclick="submitFeedback()">提交</button>
     </div>
   </div>
 </div>
