--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <main>
   <div class="logo">
-    <div class="logo-icon">一</div>
+    <!-- <div class="logo-icon">一</div> -->
     <div class="logo-title">资源站</div>
     <div class="logo-desc">累计更新8500+部广播剧，广播剧界的天花板 NO.1</div>
   </div>
