--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="zh">
 <head>
 <meta charset="UTF-8" />
+<link rel="icon" href="favicon.jpg" type="image/jpeg">
+<link rel="shortcut icon" href="favicon.jpg" type="image/jpeg">
 <title>资源站</title>
 <link rel="stylesheet" href="styles.css">
 </head>
