--- a/search.html
+++ b/search.html
@@ -3,6 +3,10 @@
 <head>
 <meta charset="UTF-8" />
 <title>搜索结果 - 资源站</title>
+<!-- Element UI CSS -->
+<link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
+<link rel="icon" href="favicon.jpg" type="image/jpeg">
+<link rel="shortcut icon" href="favicon.jpg" type="image/jpeg">
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -54,6 +58,49 @@
       <button class="pagination-btn">‹</button>
       <button class="pagination-btn active">1</button>
       <button class="pagination-btn">›</button>
+    </div>
+  </div>
+</div>
+
+<!-- 详情弹窗 -->
+<div class="detail-modal" id="detailModal">
+  <div class="detail-modal-content">
+    <div class="detail-modal-header">
+      <div class="detail-header-bar"></div>
+      <span>详情</span>
+      <span class="close-btn" onclick="closeDetailModal()">×</span>
+    </div>
+    <div class="detail-modal-body">
+      <div class="detail-title" id="detailTitle"></div>
+      <div class="detail-info">
+        <div class="detail-row">
+          <span class="detail-label">资源分类</span>
+          <span class="detail-value" id="detailCategory"></span>
+        </div>
+        <div class="detail-row">
+          <span class="detail-label">资源描述</span>
+          <span class="detail-value" id="detailDesc">-</span>
+        </div>
+        <div class="detail-row">
+          <span class="detail-label">更新时间</span>
+          <span class="detail-value" id="detailDate"></span>
+        </div>
+        <div class="detail-row">
+          <span class="detail-label">资源类型</span>
+          <span class="detail-value" id="detailSource">
+            <img src="https://nd-static.bdstatic.com/m-static/wp-brand/favicon.ico" alt="百度网盘" style="width:16px;height:16px;vertical-align:middle;margin-right:4px;">
+            <span id="detailSourceText"></span>
+          </span>
+        </div>
+        <div class="detail-row">
+          <span class="detail-label">资源地址</span>
+          <a class="detail-link" id="detailLink" href="#" target="_blank"></a>
+        </div>
+      </div>
+      <div class="detail-actions">
+        <button class="detail-btn copy" id="detailCopyBtn">↗ 复制分享</button>
+        <button class="detail-btn visit" id="detailVisitBtn">🔗 立即访问</button>
+      </div>
     </div>
   </div>
 </div>
